@@ -6,6 +6,7 @@
 - Add Changelog file
 - Add `make release` cmd
 - Improve layout and navigation
+- Fix panic when deck subroute was not found, eg: /decks/XXXX/edit
 
 ## v0.0.2
 
